<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/menu_statistics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/menu_statistics" />

    <item
        android:id="@+id/menu_assets"
        android:icon="@drawable/ic_wallet"
        android:title="@string/menu_assets" />

    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/menu_ai"
        android:icon="@drawable/ic_ai"
        android:title="@string/menu_ai" />

</menu>